[package]
name = "minactor-examples"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/minactor"
license-file = "../LICENSE"
readme = "../README.md"
description = "Examples in using minactor."
homepage = "https://github.com/Danconnolly/minactor"
documentation = "https://docs.rs/"

[dependencies]
log = "0.4.21"
minactor = { path = "../minactor"}
simple_logger = "5.0.0"
tokio = { version = ">=1.23.1", features = ["full"] }

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "hellocounter"
path = "src/hellocounter.rs"
