[package]
name = "minactor"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/minactor"
license-file = "../LICENSE"
readme = "../README.md"
description = "Minimal actor framework for Rust with tokio."
homepage = "https://github.com/Danconnolly/minactor"
documentation = "https://docs.rs/minactor"
keywords = ["actor"]

[dependencies]
log = "0.4.21"
tokio = { version = ">=1.23.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
trait-variant = "0.1.2"
